@@ -57,18 +57,21 @@ public abstract class ConfigSetService {
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  public static ConfigSetService createConfigSetService(NodeConfig nodeConfig, SolrResourceLoader loader, ZkController zkController) {
+  public static ConfigSetService createConfigSetService(CoreContainer coreContainer) {
+
+    NodeConfig nodeConfig = coreContainer.getConfig();
+    SolrResourceLoader loader = coreContainer.getResourceLoader();
+    ZkController zkController = coreContainer.getZkController();
 
     String configSetServiceClass = nodeConfig.getConfigSetServiceClass();
 
     if(configSetServiceClass != null){
       try {
         Class<? extends ConfigSetService> clazz = loader.findClass(configSetServiceClass, ConfigSetService.class);
-        Constructor<? extends ConfigSetService> constructor
-                = clazz.getConstructor(SolrResourceLoader.class, NodeConfig.class, ZkController.class);
-        return constructor.newInstance(loader, nodeConfig, zkController);
+        Constructor<? extends ConfigSetService> constructor = clazz.getConstructor(CoreContainer.class);
+        return constructor.newInstance(coreContainer);
       } catch (Exception e) {
-        throw new RuntimeException("create configSetService instance faild,configSetServiceClass:"+ configSetServiceClass,e);
+        throw new RuntimeException("create configSetService instance faild,configSetServiceClass:" + configSetServiceClass, e);
       }
     }else if(zkController == null){
       return new Standalone(loader, nodeConfig.hasSchemaCache(), nodeConfig.getConfigSetBaseDirectory());
